--- a/public/PCEconomic/src/main/resources/templates/layout/layout.html
+++ b/public/PCEconomic/src/main/resources/templates/layout/layout.html
@@ -90,7 +90,7 @@
                                     data-bs-toggle="dropdown" aria-expanded="false">
                                 <i class="bi bi-door-open-fill"></i>
                             </button>
-                            <ul class="dropdown-menu">
+                            <ul class="dropdown-menu" id="menu-login">
                                 <li><a class="dropdown-item" href="/areaclients">Mi Area de Cliente</a></li>
                                 <li><a class="dropdown-item" href="/logout">Cerrar Session</a></li>
                             </ul>
@@ -171,7 +171,6 @@
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script>
         $.ajax({
-
             url: "/api/propietats",
             type: "GET",
             success: function (data) {
@@ -243,6 +242,12 @@
                 }
             },
         });
+
+
+
+
+
+
 
         function formatCurrency(amount) {
             return amount.toFixed(2).toString().replace(".", ",").replace(/\B(?=(\d{3})+(?!\d))/g, ".") + " €";
