--- a/public/PCEconomic/src/main/resources/templates/layout/layout.html
+++ b/public/PCEconomic/src/main/resources/templates/layout/layout.html
@@ -92,7 +92,7 @@
                             </button>
                             <ul class="dropdown-menu" id="menu-login">
                                 <li><a class="dropdown-item" href="/areaclients">Mi Area de Cliente</a></li>
-                                <li><a class="dropdown-item" href="http://localhost/#/" th:each="rol : ${rols}" th:if="${rol.name == 'ADMINISTRADOR'}">Gestionar Productos</a></li>
+                                <li><a class="dropdown-item" href="http://admin.pceconomic.me/#/" th:each="rol : ${rols}" th:if="${rol.name == 'ADMINISTRADOR'}">Gestionar Productos</a></li>
                                 <li><a class="dropdown-item" href="/logout">Cerrar Session</a></li>
                             </ul>
                         </div>
