--- a/public/PCEconomic/src/main/resources/templates/article.html
+++ b/public/PCEconomic/src/main/resources/templates/article.html
@@ -9,7 +9,9 @@
         <nav aria-label="breadcrumb mt-2">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="/"><i class="bi bi-house"></i></a></li>
-                <li class="breadcrumb-item"><a class="text-decoration-none" th:each="c : ${categoria}" th:href="@{/categoria/{categoria}(categoria=${c.getId()})}" th:text="${c.getName()}"></a></li>
+                <li class="breadcrumb-item"><a class="text-decoration-none" th:each="c : ${categoria}"
+                                               th:href="@{/categoria/{categoria}(categoria=${c.getId()})}"
+                                               th:text="${c.getName()}"></a></li>
                 <li class="breadcrumb-item active" aria-current="page" th:text="${propietats.article.nom}"></li>
             </ol>
         </nav>
@@ -22,11 +24,13 @@
                         >
                             <img class="d-block img-fluid imgSizeArticle"
                                  th:src="@{/img/productes/{article}/{prop}/{foto}(article=${propietats.article.id},prop=${propietats.id},foto=${foto.path})}"
-                                 id="propietats.id" th:alt="${foto.id}" alt="foto" src="" style="max-height:500px; margin:auto; object-fit: contain;">
+                                 id="propietats.id" th:alt="${foto.id}" alt="foto" src=""
+                                 style="max-height:500px; margin:auto; object-fit: contain;">
                         </div>
                         <div class="carousel-item" th:if="${propietats.imatges.size() == 0}">
                             <img class="d-block img-fluid imgSizeArticle"
-                                 th:src="@{/img/static/no-photo.png}" th:alt="${propietats.article.id}" alt="foto" src="" style="max-height:500px; margin:auto; object-fit: contain;">
+                                 th:src="@{/img/static/no-photo.png}" th:alt="${propietats.article.id}" alt="foto"
+                                 src="" style="max-height:500px; margin:auto; object-fit: contain;">
                         </div>
                     </div>
                     <button th:if="${propietats.imatges.size() > 1}" class="carousel-control-prev" data-bs-slide="prev"
@@ -83,7 +87,8 @@
                 </div>
 
                 <div class="row justify-content-evenly mt-3" th:if="${propietats.stock} == 0">
-                    <div class="row justify-content-start align-items-start mt-4 col-12" th:if="${propietats.stock} == 0">
+                    <div class="row justify-content-start align-items-start mt-4 col-12"
+                         th:if="${propietats.stock} == 0">
                         <div class="col-12 row justify-content-start">
                             <div class="alert alert-warning" role="alert">
                                 Lo sentimos, este producto no está disponible en este momento.
@@ -93,10 +98,10 @@
 
                     <div id="stockDisponible" class="col-10 row">
                         <div class="col-6">
-                            <input type="email" class="form-control " id="email" placeholder="Introduce tu email" >
+                            <input type="email" class="form-control " id="email" placeholder="Introduce tu email">
                         </div>
                         <button type="button" class="btn btn-pc-economic-dark col-6">
-                          Notificar cuando haya stock
+                            Notificar cuando haya stock
                         </button>
 
                     </div>
@@ -122,105 +127,103 @@
                         Actualmente no hay valoraciones para este producto
                     </div>
 
-                    <div id="pagination-container" class="card-deck pag-container container" style="width: 1250px;">
-                        <div class="card m-3" th:each="valoracio : ${valoracions}"
-                             th:if="${propietats.article.id == valoracio.article.id}">
-                            <div class="card-header d-flex justify-content-evenly">
-                                <p class="me-auto p-2"
-                                   th:text="${valoracio.client.name} + ' ' + ${valoracio.client.surname1} "></p>
-                                <input class="rating"
-                                       max="5"
-                                       oninput="this.style.setProperty('--value', `${this.valueAsNumber}`)"
-                                       step="0.5"
-                                       th:style="'--value: ' + ${valoracio.valoracio}"
-                                       type="range"
-                                       value="2.5"
-                                       disabled
-                                />
-                                <span class="valoracion-fecha" style="margin-left: 10px;"
-                                      th:text="${valoracio.data}"></span>
-                            </div>
-                            <div class="card-body">
-                                <div class="col-12">
-                                    <p th:text="${valoracio.comentari}"></p>
-                                </div>
-
-                                <div th:if="${user != null && user.id == valoracio.client.id}"
-                                     class="d-flex flex-row-reverse mt-2">
-                                    <button style="margin-left: 10px;" type="button" class="btn btn-danger"
-                                            data-bs-toggle="modal"
-                                            th:attr="data-bs-target='#deleteModal-' + ${valoracio.id}">
-                                        <i class="bi bi-trash"></i>
-                                    </button>
-                                    <button type="button" class="btn btn-pc-economic-dark" data-bs-toggle="modal"
-                                            th:attr="data-bs-target='#editModal-' + ${valoracio.id}">
-                                        <i class="bi bi-pencil"></i>
-                                    </button>
-                                </div>
+                    <div class="card m-3" th:each="valoracio : ${valoracions}"
+                         th:if="${propietats.article.id == valoracio.article.id}">
+                        <div class="card-header d-flex justify-content-evenly">
+                            <p class="me-auto p-2"
+                               th:text="${valoracio.client.name} + ' ' + ${valoracio.client.surname1} "></p>
+                            <input class="rating"
+                                   max="5"
+                                   oninput="this.style.setProperty('--value', `${this.valueAsNumber}`)"
+                                   step="0.5"
+                                   th:style="'--value: ' + ${valoracio.valoracio}"
+                                   type="range"
+                                   value="2.5"
+                                   disabled
+                            />
+                            <span class="valoracion-fecha" style="margin-left: 10px;"
+                                  th:text="${valoracio.data}"></span>
+                        </div>
+                        <div class="card-body">
+                            <div class="col-12">
+                                <p th:text="${valoracio.comentari}"></p>
                             </div>
 
-                            <div th:if="${user != null}" class="modal fade" th:id="'editModal-' + ${valoracio.id}"
-                                 tabindex="-1"
-                                 aria-labelledby="editValorationLabel"
-                                 aria-hidden="true">
-                                <div class="modal-dialog">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h1 class="modal-title fs-5" id="editValorationLabel">Añadir Valoracion</h1>
-                                            <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                                    aria-label="Close"></button>
-                                        </div>
-                                        <div class="modal-body">
-                                            <form th:action="@{/areaclients/updatevaloracio/{idArticle}/{idClient}/{idPropietat}/{idval}(idArticle=${propietats.article.id}, idClient=${user.id}, idPropietat=${propietats.id}, idval=${valoracio.id})}"
-                                                  th:object="${addvaloracio}" method="post">
-                                                <div class="mb-3">
-                                                    <label for="editvaloracio" class="form-label">Valoracion</label>
-                                                    <input id="editvaloracio"
-                                                           th:field="*{valoracio}"
-                                                           class="rating"
-                                                           max="5"
-                                                           oninput="this.style.setProperty('--value', `${this.valueAsNumber}`)"
-                                                           step="0.5"
-                                                           th:style="'--value: ' + ${valoracio.valoracio}"
-                                                           type="range"
-                                                           th:value="${valoracio.valoracio}"
-                                                           th:placeholder="${valoracio.valoracio}"
-                                                    />
-                                                </div>
-                                                <div class="mb-3">
-                                                    <label for="editComentari" class="form-label">Comentario</label>
-                                                    <input type="text" id="editComentari" th:field="*{comentari}"
-                                                           th:placeholder="${valoracio.comentari}">
-                                                </div>
-                                                <button type="submit" class="btn btn-pc-economic-dark">Actualizar</button>
-                                            </form>
-                                        </div>
+                            <div th:if="${user != null && user.id == valoracio.client.id}"
+                                 class="d-flex flex-row-reverse mt-2">
+                                <button style="margin-left: 10px;" type="button" class="btn btn-danger"
+                                        data-bs-toggle="modal"
+                                        th:attr="data-bs-target='#deleteModal-' + ${valoracio.id}">
+                                    <i class="bi bi-trash"></i>
+                                </button>
+                                <button type="button" class="btn btn-pc-economic-dark" data-bs-toggle="modal"
+                                        th:attr="data-bs-target='#editModal-' + ${valoracio.id}">
+                                    <i class="bi bi-pencil"></i>
+                                </button>
+                            </div>
+                        </div>
+
+                        <div th:if="${user != null}" class="modal fade" th:id="'editModal-' + ${valoracio.id}"
+                             tabindex="-1"
+                             aria-labelledby="editValorationLabel"
+                             aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h1 class="modal-title fs-5" id="editValorationLabel">Añadir Valoracion</h1>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <form th:action="@{/areaclients/updatevaloracio/{idArticle}/{idClient}/{idPropietat}/{idval}(idArticle=${propietats.article.id}, idClient=${user.id}, idPropietat=${propietats.id}, idval=${valoracio.id})}"
+                                              th:object="${addvaloracio}" method="post">
+                                            <div class="mb-3">
+                                                <label for="editvaloracio" class="form-label">Valoracion</label>
+                                                <input id="editvaloracio"
+                                                       th:field="*{valoracio}"
+                                                       class="rating"
+                                                       max="5"
+                                                       oninput="this.style.setProperty('--value', `${this.valueAsNumber}`)"
+                                                       step="0.5"
+                                                       th:style="'--value: ' + ${valoracio.valoracio}"
+                                                       type="range"
+                                                       th:value="${valoracio.valoracio}"
+                                                       th:placeholder="${valoracio.valoracio}"
+                                                />
+                                            </div>
+                                            <div class="mb-3">
+                                                <label for="editComentari" class="form-label">Comentario</label>
+                                                <input type="text" id="editComentari" th:field="*{comentari}"
+                                                       th:placeholder="${valoracio.comentari}">
+                                            </div>
+                                            <button type="submit" class="btn btn-pc-economic-dark">Actualizar</button>
+                                        </form>
                                     </div>
                                 </div>
                             </div>
+                        </div>
 
 
-                            <div class="modal fade" th:id="'deleteModal-' + ${valoracio.id}" tabindex="-1"
-                                 aria-labelledby="deleteModalLabel"
-                                 aria-hidden="true">
-                                <div class="modal-dialog">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h1 class="modal-title fs-5" id="deleteModalLabel">Eliminar Valoracion</h1>
-                                            <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                                    aria-label="Close"></button>
-                                        </div>
-                                        <div class="modal-body">
-                                            Esta seguro que desea eliminar la valoracion?
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-pc-economic-default"
-                                                    data-bs-dismiss="modal">
-                                                No
-                                            </button>
-                                            <a th:href="@{/areaclients/deletevaloracio/{id}/{idart}/{idprop}(id=${valoracio.id}, idart=${propietats.article.id}, idprop=${propietats.id})}"
-                                               class="btn btn-danger">Si</a>
-                                        </div>
+                        <div class="modal fade" th:id="'deleteModal-' + ${valoracio.id}" tabindex="-1"
+                             aria-labelledby="deleteModalLabel"
+                             aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h1 class="modal-title fs-5" id="deleteModalLabel">Eliminar Valoracion</h1>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        Esta seguro que desea eliminar la valoracion?
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-pc-economic-default"
+                                                data-bs-dismiss="modal">
+                                            No
+                                        </button>
+                                        <a th:href="@{/areaclients/deletevaloracio/{id}/{idart}/{idprop}(id=${valoracio.id}, idart=${propietats.article.id}, idprop=${propietats.id})}"
+                                           class="btn btn-danger">Si</a>
                                     </div>
                                 </div>
                             </div>
