fix: fixed change password form not being centered

--- a/public/PCEconomic/src/main/resources/templates/changepassword.html
+++ b/public/PCEconomic/src/main/resources/templates/changepassword.html
@@ -23,39 +23,41 @@
         <header th:replace="layout/layout :: header2"></header>
         <main class="container bg-cont mt-5 p-3">
             <h1 class="text-center">Nueva Contraseña</h1>
-            <form method="post" novalidate class="needs-validation col-sm-12 col-xl-5"
-                  th:action="@{/changepassword/{token}(token=${token})}"
-                  th:object="${changePasswordForm}">
-                <div class="row">
-                    <div class="col-12">
-                        <label for="token" class="form-label">Correo Electronico</label>
-                        <input class="form-control" id="token" type="text" th:placeholder="${token}" disabled>
+            <div class="d-flex flex-column justify-content-center align-items-center">
+                <form method="post" novalidate class="needs-validation col-sm-12 col-xl-5"
+                      th:action="@{/changepassword/{token}(token=${token})}"
+                      th:object="${changePasswordForm}">
+                    <div class="row">
+                        <div class="col-12">
+                            <label for="token" class="form-label">Correo Electronico</label>
+                            <input class="form-control" id="token" type="text" th:placeholder="${token}" disabled>
+                        </div>
+                        <div class="col-12">
+                            <label for="password" class="form-label">Contraseña</label>
+                            <input class="form-control" id="password" type="password" th:field="*{newPassword}" required>
+                        </div>
+                        <div class="col-12">
+                            <label for="confirmPassword" class="form-label">Confirmar Contraseña</label>
+                            <input class="form-control" id="confirmPassword" type="password" th:field="*{confirmPassword}" required>
+                        </div>
+                        <div class="text-center mt-3">
+                            <button type="submit" class="btn btn-pc-economic-dark">Enviar</button>
+                        </div>
                     </div>
-                    <div class="col-12">
-                        <label for="password" class="form-label">Contraseña</label>
-                        <input class="form-control" id="password" type="password" th:field="*{newPassword}" required>
+                    <div class="m-1 alert alert-danger" th:if="${#fields.hasErrors('newPassword')}">
+                        <i class='bi bi-exclamation-triangle'></i>
+                        <span th:errors="*{newPassword}"></span>
                     </div>
-                    <div class="col-12">
-                        <label for="confirmPassword" class="form-label">Confirmar Contraseña</label>
-                        <input class="form-control" id="confirmPassword" type="password" th:field="*{confirmPassword}" required>
+                    <div class="m-1 alert alert-danger" th:if="${#fields.hasErrors('confirmPassword')}">
+                        <i class='bi bi-exclamation-triangle'></i>
+                        <span th:errors="*{confirmPassword}"></span>
                     </div>
-                    <div class="text-center mt-3">
-                        <button type="submit" class="btn btn-pc-economic-dark">Enviar</button>
+                    <div class="m-1 alert alert-danger" th:if="${passwordmatch != null}">
+                        <i class='bi bi-exclamation-triangle'></i>
+                        <span th:text="${passwordmatch}"></span>
                     </div>
-                </div>
-                <div class="m-1 alert alert-danger" th:if="${#fields.hasErrors('newPassword')}">
-                    <i class='bi bi-exclamation-triangle'></i>
-                    <span th:errors="*{newPassword}"></span>
-                </div>
-                <div class="m-1 alert alert-danger" th:if="${#fields.hasErrors('confirmPassword')}">
-                    <i class='bi bi-exclamation-triangle'></i>
-                    <span th:errors="*{confirmPassword}"></span>
-                </div>
-                <div class="m-1 alert alert-danger" th:if="${passwordmatch != null}">
-                    <i class='bi bi-exclamation-triangle'></i>
-                    <span th:text="${passwordmatch}"></span>
-                </div>
-            </form>
+                </form>
+            </div>
         </main>
         <footer th:replace="layout/layout :: footer"></footer>
     </body>
