--- a/public/PCEconomic/src/main/resources/templates/areaclients.html
+++ b/public/PCEconomic/src/main/resources/templates/areaclients.html
@@ -504,7 +504,7 @@
                     <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="pedidos"
                          data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <div class="row" th:if="${user.factures.isEmpty()}">
+                            <div class="row" th:if="${facturas.isEmpty()}">
 
                                 <div class="d-flex flex-column justify-content-center align-items-center">
                                     <p>Actualmente no tienes ningun pedido disponible</p>
@@ -516,13 +516,13 @@
                                 </div>
                             </div>
 
-                            <div class="row" th:if="${!user.factures.isEmpty()}">
+                            <div class="row" th:if="${!facturas.isEmpty()}">
 
                                 <div class="d-flex flex-column justify-content-center align-items-center">
                                     <p>Actualmente tienens los siguientes pedidos hechos</p>
 
                                     <ul class="list-group list-group-flush w-50">
-                                        <li th:each="factura : ${user.factures}" th:if="${factura.estat == 'COMPLETED'}"
+                                        <li th:each="factura : ${facturas}" th:if="${factura.estat == 'COMPLETED'}"
                                             class="list-group-item">
 
                                             <div class="d-flex justify-content-between">
