--- a/public/PCEconomic/src/main/resources/templates/direcciones-envio.html
+++ b/public/PCEconomic/src/main/resources/templates/direcciones-envio.html
@@ -1,9 +1,6 @@
 <!doctype html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="layout/layout.html :: head"></head>
-<head>
-    <title th:text="' Direcciones i envio | PCEconomic'"></title>
-</head>
+<head th:replace="layout/layout.html :: head(title='Direcciones i envio | PCEconomic', description='Direccions de envio de la pagina PCEconomic')"></head>
 <body class="bgbd">
 <header th:replace="layout/layout :: header2"></header>
 <main class="container-lg bg-cont mt-md-5 mt-1 row justify-content-around">
