--- a/public/PCEconomic/src/main/resources/templates/error.html
+++ b/public/PCEconomic/src/main/resources/templates/error.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
-    <head th:replace="layout/layout.html :: head"></head>
+    <head th:replace="layout/layout.html :: head(title='Error | PCEconomic', description='Pagina de error de PCEconomic')"></head>
     <header th:replace="layout/layout.html :: header2"></header>
     <body class="bgbd">
         <main class="container-lg bg-cont mt-md-5 mt-1 text-center">
