--- a/public/PCEconomic/src/main/resources/templates/login.html
+++ b/public/PCEconomic/src/main/resources/templates/login.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="layout/layout :: head">
-</head>
-<head>
-    <title>Login | PCEconomic</title>
+<head th:replace="layout/layout :: head(title='Login | PCEconomic', description='Pagina de logeo de PCEconomic')">
 </head>
 <body class="bgbd">
     <header th:replace="layout/layout :: header2"></header>
