--- a/public/PCEconomic/src/main/resources/templates/changepassword.html
+++ b/public/PCEconomic/src/main/resources/templates/changepassword.html
@@ -1,64 +1,47 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
-    <head>
-        <meta charset="UTF-8">
-        <title>Contraseña Olvidada | PCEconomic</title>
-        <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
-        <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-        <link href="https://fonts.googleapis.com" rel="preconnect"/>
-        <link crossorigin href="https://fonts.gstatic.com" rel="preconnect"/>
-        <link
-                href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap"
-                rel="stylesheet"
-        />
-        <link rel="stylesheet" th:href="@{/css/custom.css}"/>
-        <link
-                href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
-                rel="stylesheet"
-        />
-        <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet"/>
-        <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
-    </head>
-    <body class="bgbd">
-        <header th:replace="layout/layout :: header2"></header>
-        <main class="container bg-cont mt-5 p-3">
-            <h1 class="text-center">Nueva Contraseña</h1>
-            <div class="d-flex flex-column justify-content-center align-items-center">
-                <form method="post" novalidate class="needs-validation col-sm-12 col-xl-5"
-                      th:action="@{/changepassword/{token}(token=${token})}"
-                      th:object="${changePasswordForm}">
-                    <div class="row">
-                        <div class="col-12">
-                            <label for="token" class="form-label">Correo Electronico</label>
-                            <input class="form-control" id="token" type="text" th:placeholder="${token}" disabled>
-                        </div>
-                        <div class="col-12">
-                            <label for="password" class="form-label">Contraseña</label>
-                            <input class="form-control" id="password" type="password" th:field="*{newPassword}" required>
-                        </div>
-                        <div class="col-12">
-                            <label for="confirmPassword" class="form-label">Confirmar Contraseña</label>
-                            <input class="form-control" id="confirmPassword" type="password" th:field="*{confirmPassword}" required>
-                        </div>
-                        <div class="text-center mt-3">
-                            <button type="submit" class="btn btn-pc-economic-dark">Enviar</button>
-                        </div>
+<head th:replace="layout/layout.html :: head(title='Contraseña Olvidada | PCEconomic', description='Pagina de reseteo de contraseña de PCEconomic')"></head>
+<body class="bgbd">
+    <header th:replace="layout/layout :: header2"></header>
+    <main class="container bg-cont mt-5 p-3">
+        <h1 class="text-center">Nueva Contraseña</h1>
+        <div class="d-flex flex-column justify-content-center align-items-center">
+            <form method="post" novalidate class="needs-validation col-sm-12 col-xl-5"
+                  th:action="@{/changepassword/{token}(token=${token})}"
+                  th:object="${changePasswordForm}">
+                <div class="row">
+                    <div class="col-12">
+                        <label for="token" class="form-label">Correo Electronico</label>
+                        <input class="form-control" id="token" type="text" th:placeholder="${token}" disabled>
                     </div>
-                    <div class="m-1 alert alert-danger" th:if="${#fields.hasErrors('newPassword')}">
-                        <i class='bi bi-exclamation-triangle'></i>
-                        <span th:errors="*{newPassword}"></span>
+                    <div class="col-12">
+                        <label for="password" class="form-label">Contraseña</label>
+                        <input class="form-control" id="password" type="password" th:field="*{newPassword}" required>
                     </div>
-                    <div class="m-1 alert alert-danger" th:if="${#fields.hasErrors('confirmPassword')}">
-                        <i class='bi bi-exclamation-triangle'></i>
-                        <span th:errors="*{confirmPassword}"></span>
+                    <div class="col-12">
+                        <label for="confirmPassword" class="form-label">Confirmar Contraseña</label>
+                        <input class="form-control" id="confirmPassword" type="password" th:field="*{confirmPassword}"
+                               required>
                     </div>
-                    <div class="m-1 alert alert-danger" th:if="${passwordmatch != null}">
-                        <i class='bi bi-exclamation-triangle'></i>
-                        <span th:text="${passwordmatch}"></span>
+                    <div class="text-center mt-3">
+                        <button type="submit" class="btn btn-pc-economic-dark">Enviar</button>
                     </div>
-                </form>
-            </div>
-        </main>
-        <footer th:replace="layout/layout :: footer"></footer>
-    </body>
+                </div>
+                <div class="m-1 alert alert-danger" th:if="${#fields.hasErrors('newPassword')}">
+                    <i class='bi bi-exclamation-triangle'></i>
+                    <span th:errors="*{newPassword}"></span>
+                </div>
+                <div class="m-1 alert alert-danger" th:if="${#fields.hasErrors('confirmPassword')}">
+                    <i class='bi bi-exclamation-triangle'></i>
+                    <span th:errors="*{confirmPassword}"></span>
+                </div>
+                <div class="m-1 alert alert-danger" th:if="${passwordmatch != null}">
+                    <i class='bi bi-exclamation-triangle'></i>
+                    <span th:text="${passwordmatch}"></span>
+                </div>
+            </form>
+        </div>
+    </main>
+    <footer th:replace="layout/layout :: footer"></footer>
+</body>
 </html>
