--- a/public/PCEconomic/src/main/resources/templates/confirmregister.html
+++ b/public/PCEconomic/src/main/resources/templates/confirmregister.html
@@ -1,35 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-    <head>
-        <meta charset="UTF-8">
-        <title>Registro | PCEconomic</title>
-        <meta charset="UTF-8"/>
-        <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
-        <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-        <link href="https://fonts.googleapis.com" rel="preconnect"/>
-        <link crossorigin href="https://fonts.gstatic.com" rel="preconnect"/>
-        <link
-                href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap"
-                rel="stylesheet"
-        />
-        <link rel="stylesheet" th:href="@{/css/custom.css}"/>
-        <link
-                href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
-                rel="stylesheet"
-        />
-        <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet"/>
-        <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
-    </head>
-    <body class="bgbd">
-        <header th:replace="layout/layout :: header2"></header>
-        <main class="container bg-cont mt-5 p-3">
-            <div class="d-flex flex-column justify-content-center align-items-center">
-                <h2 class="mt-4">Confirma tu registro</h2>
-                <h3 class="mt-3">Gracias por registrarse en nuestro sitio. Mire su bandeja de entrada para confirmar su registro.</h3>
-                <h3>Muchas gracias!</h3>
-                <a class="btn btn-pc-economic-dark mt-3 mb-5" th:href="@{/}">Explorar articulos</a>
-            </div>
-        </main>
-        <footer th:replace="layout/layout :: footer"></footer>
-    </body>
+<head th:replace="layout/layout.html :: head(title='Registro | PCEconomic', description='Pagina de confirmacion de registro de PCEconomic')"></head>
+<body class="bgbd">
+    <header th:replace="layout/layout :: header2"></header>
+    <main class="container bg-cont mt-5 p-3">
+        <div class="d-flex flex-column justify-content-center align-items-center">
+            <h2 class="mt-4">Confirma tu registro</h2>
+            <h3 class="mt-3">Gracias por registrarse en nuestro sitio. Mire su bandeja de entrada para confirmar su
+                registro.</h3>
+            <h3>Muchas gracias!</h3>
+            <a class="btn btn-pc-economic-dark mt-3 mb-5" th:href="@{/}">Explorar articulos</a>
+        </div>
+    </main>
+    <footer th:replace="layout/layout :: footer"></footer>
+</body>
 </html>
