--- a/public/PCEconomic/src/main/resources/templates/register.html
+++ b/public/PCEconomic/src/main/resources/templates/register.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="layout/layout :: head">
-</head>
-<head>
-    <title>Register | PCEconomic</title>
+<head th:replace="layout/layout :: head(title='Register | PCEconomic', description='Pagina de registro de PCEconomic')">
 </head>
 <body class="bgbd">
     <header th:replace="layout/layout :: navbar"></header>
