feat: started importing google maps

--- a/public/PCEconomic/src/main/resources/templates/layout/layout.html
+++ b/public/PCEconomic/src/main/resources/templates/layout/layout.html
@@ -161,6 +161,33 @@
         © 2023 PCEconomic Company, Inc y Multimedia SLU CIF B73347494. Ses
         Tapereres, 32, 07500 Manacor, Balearic Islands
     </p>
+
+    <div id="map"></div>
+
+    <script type="module">
+        function init() {
+            navigator.geolocation.getCurrentPosition((position) => {
+                const myPos = {
+                    lat: position.coords.latitude,
+                    lng: position.coords.longitude,
+                };
+                const map = new google.maps.Map(document.getElementById("map"), {
+                    zoom: 15,
+                    center: myPos,
+                });
+                const marker = new google.maps.Marker({
+                    position: myPos,
+                    map: map,
+                });
+            });
+        }
+        window.inicialitza = init;
+    </script>
+    <script
+            src="https://maps.googleapis.com/maps/api/js?key=&callback=inicialitza&v=weekly"
+            defer
+    ></script>
+
 </footer>
 <div th:fragment="jquery">
     <script
@@ -243,13 +270,6 @@
                 }
             },
         });
-
-
-
-
-
-
-
         function formatCurrency(amount) {
             return amount.toFixed(2).toString().replace(".", ",").replace(/\B(?=(\d{3})+(?!\d))/g, ".") + " €";
         }
