--- a/public/PCEconomic/src/main/resources/templates/layout/layout.html
+++ b/public/PCEconomic/src/main/resources/templates/layout/layout.html
@@ -86,9 +86,9 @@
                         </li>
                         <li th:if="${client == 'LOGOUT'}" class="nav-item d-flex justify-content-center ">
                             <div class="dropdown">
-                                <button aria-label="Desplegable area de Clientes" class="nav-link btn btn-danger mt-1 dropdown-toggle" type="button"
+                                <button aria-label="Desplegable area de Clientes" class="nav-link btn btn-pc-economic-dark mt-1 dropdown-toggle" type="button"
                                         data-bs-toggle="dropdown" aria-expanded="false">
-                                    <i class="bi bi-door-open-fill"></i>
+                                    <i class="bi bi-person-circle"></i>
                                 </button>
                                 <ul class="dropdown-menu" id="menu-login">
                                     <li><a class="dropdown-item" href="/areaclients">Mi Area de Cliente</a></li>
