--- a/public/PCEconomic/src/main/resources/templates/areaclients.html
+++ b/public/PCEconomic/src/main/resources/templates/areaclients.html
@@ -4,6 +4,12 @@
 <body class="bgbd">
     <header th:replace="layout/layout :: navbar"></header>
     <main class="container bg-cont mt-5 p-3">
+        <nav aria-label="breadcrumb mt-2">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="/"><i class="bi bi-house"></i></a></li>
+                <li class="breadcrumb-item active" aria-current="page">Area de Clientes</li>
+            </ol>
+        </nav>
         <div class="row">
             <div class="d-flex flex-row mt-2 mb-2">
                 <a class="btn btn-danger" href="/logout">
