--- a/public/PCEconomic/src/main/resources/templates/lostpassword.html
+++ b/public/PCEconomic/src/main/resources/templates/lostpassword.html
@@ -4,6 +4,12 @@
 <body class="bgbd">
     <header th:replace="layout/layout :: header2"></header>
     <main class="container bg-cont mt-5 p-3">
+        <nav aria-label="breadcrumb mt-2">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="/"><i class="bi bi-house"></i></a></li>
+                <li class="breadcrumb-item active" aria-current="page">Olvidar Contraseña</li>
+            </ol>
+        </nav>
         <div class="d-flex flex-column justify-content-center align-items-center">
             <h1 class="text-center">Recuperar Contraseña</h1>
             <form class="needs-validation col-sm-12 col-xl-4"
