--- a/public/PCEconomic/src/main/resources/templates/register.html
+++ b/public/PCEconomic/src/main/resources/templates/register.html
@@ -5,6 +5,14 @@
 <body class="bgbd">
     <header th:replace="layout/layout :: navbar"></header>
     <main class="container bg-cont mt-3">
+
+        <nav aria-label="breadcrumb mt-2">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="/"><i class="bi bi-house"></i></a></li>
+                <li class="breadcrumb-item active" aria-current="page">Registro</li>
+            </ol>
+        </nav>
+
         <h1 class="text-center">Registrate Aqui!</h1>
 
         <div class="d-flex justify-content-center align-items-center">
